@@ -78,7 +78,7 @@ include_HEADERS = base/alloc.h base/allwrite.h base/arc4random.h \
 	base/authmethods.h base/base64.h base/buffer.h base/builtinoflmacros.h \
 	base/byte.h base/caldate.h base/caltime.h base/case.h \
 	base/cdb.h base/cdb_make.h base/cdbmake.h base/cdbmss.h \
-	base/check_domain.h base/coe.h base/commands.h \
+	base/check_domain.h base/coe.h base/commands.h base/wildmat.h \
 	base/constmap.h base/date822fmt.h base/datetime.h base/digest_md5.h \
 	base/direntry.h base/env.h base/error.h base/envdir.h base/evaluate.h \
 	base/fd.h base/fifo.h base/fmt.h base/gen_allocdefs.h \
@@ -108,7 +108,7 @@ COMMONSOURCES = base/alloc.c base/alloc_re.c base/allwrite.c base/arc4random.c \
 	base/byte_cr.c base/byte_cspn.c base/byte_diff.c base/byte_rchr.c \
 	base/byte_rcspn.c base/byte_zero.c base/caldate_fmjd.c base/caldate_fmt.c \
 	base/caldate_mjd.c base/caldate_scan.c base/caltime_fmt.c \
-	base/caltime_tai.c base/caltime_utc.c base/case_diffb.c \
+	base/caltime_tai.c base/caltime_utc.c base/case_diffb.c base/wildmat.c \
 	base/case_diffs.c base/case_lowerb.c base/case_lowers.c base/case_startb.c \
 	base/case_starts.c base/cdb.c base/cdb_hash.c base/cdb_make.c \
 	base/cdbmake_add.c base/cdbmake_hash.c base/cdbmss.c base/cdbmake_pack.c \
