@@ -24,6 +24,8 @@ Release 1.3-1.1 Start 30/11/2023 End 03/02/2024
 10. fix function prototypes
 - 17/05/2024
 11. mkpasswd.c, qdirname.c: fix discarded-qualifier-warnings
+- 23/05/2024
+12. added wildmat function
 
 * Fri Sep 08 2023 12:40:38 +0530 Manvendra Bhangui <libqmail@indimail.org> 1.2-1.1%{?dist}
 Release 1.2-1.1 Start 24/04/2023 End 08/09/2023
